modify doc rule issues

--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/12.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/12.view-cluster-parameters.md
@@ -108,7 +108,7 @@
 
    查询示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> SELECT * FROM GV$OB_PARAMETERS WHERE NAME LIKE '%syslog_level%';
    +----------------+----------+-------+---------+-----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+-------------------+
    | SVR_IP         | SVR_PORT | ZONE  | SCOPE   | TENANT_ID | NAME         | DATA_TYPE | VALUE | INFO                                                                                                                   | SECTION  | EDIT_LEVEL        |
