--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/13.modify-cluster-parameters.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/13.modify-cluster-parameters.md
@@ -3,9 +3,9 @@
 通过修改集群配置项，可以使 OceanBase 数据库的行为符合业务的要求。OceanBase 数据库的集群配置项即集群参数，同时参数还分为动态生效和重启生效两类。通过集群配置项的设置可以控制集群的负载均衡、合并时间、合并方式、资源分配和模块开关等功能。
 
 <main id="notice" type='notice'>
-            <h4>注意</h4>
-            <p>系统租户（即 <code>sys</code> 租户），可以查看和设置集群级配置项，用户租户只能查看集群级配置项，无法设置集群级配置项。</p>
-          </main>
+   <h4>注意</h4>
+   <p>系统租户（即 <code>sys</code> 租户），可以查看和设置集群级配置项，用户租户只能查看集群级配置项，无法设置集群级配置项。</p>
+ </main>
 
 有关配置项的更多说明，请参见 [系统配置项概述](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview.md)。
 
@@ -25,7 +25,7 @@
 
    示例：
 
-   ```sql
+   ```shell
    obclient [(none)]> SHOW PARAMETERS LIKE '%syslog_level%';
    +-------+----------+----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
    | zone  | svr_type | svr_ip         | svr_port | name         | data_type | value | info                                                                                                                   | section  | scope   | source  | edit_level        |
@@ -43,7 +43,7 @@
 
    语句如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM [SET]
        parameter_name = expression [SCOPE = {SPFILE | BOTH}]
           [COMMENT [=] 'text']
@@ -79,7 +79,7 @@
 
     示例：
 
-    ```sql
+    ```shell
     obclient [(none)]> ALTER SYSTEM SET syslog_level='ERROR' SCOPE = SPFILE;
 
     obclient [(none)]> ALTER SYSTEM SET log_disk_utilization_threshold = 20 TENANT='ALL';
@@ -93,7 +93,7 @@
 
 4. 修改成功后，可以根据实际情况（重启 OBServer 或不重启 OBServer），通过 `SHOW PARAMETERS` 语句验证配置项的值是否修改成功。
 
-   ```sql
+   ```shell
    obclient [(none)]> SHOW PARAMETERS LIKE 'system_memory';
    +-------+----------+----------------+----------+---------------+-----------+-------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
    | zone  | svr_type | svr_ip         | svr_port | name          | data_type | value | info                                                                                                                                                                    | section  | scope   | source  | edit_level        |
