--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/5.delete-a-node.md
@@ -25,12 +25,12 @@ Unit 自动迁移过程中，迁移任务会占用迁出节点与迁入节点的
    
   迁移任务相关的配置项如下表所示。
 
-  |           配置项名      |                                           描述                                              |
-  |------------------------|---------------------------------------------------------------------------------------------|
+  |           配置项名      |     描述            |
+  |------------------------|-----------------------------------------------|
   | balancer_idle_time     | 集群级配置项，可以控制每次发起迁移任务的时间间隔。默认值为 5m，表示 5 分钟，取值范围为 [10s, +∞)。 |
   | sys_bkgd_net_percentage| 集群级配置项，可以控制迁移任务占用网卡带宽的百分比。默认值为 60，取值范围为 [0, 100]。            |
 
-  查看并修改各配置项值的相关操作请参见 [修改集群配置项](13.modify-cluster-parameters.md）。
+  查看并修改各配置项值的相关操作请参见 [修改集群配置项](13.modify-cluster-parameters.md)。
 
 ## 操作步骤
 
@@ -53,7 +53,7 @@ Unit 自动迁移过程中，迁移任务会占用迁出节点与迁入节点的
 
    1. 查看当前 Unit 分布，获取待迁移的 Unit 的 ID。
 
-      ```sql
+      ```shell
       obclient [(none)]> SELECT UNIT_ID,TENANT_ID,STATUS,ZONE,SVR_IP FROM oceanbase.DBA_OB_UNITS;
       +---------+-----------+--------+-------+----------------+
       | UNIT_ID | TENANT_ID | STATUS | ZONE  | SVR_IP         |
@@ -98,7 +98,7 @@ Unit 自动迁移过程中，迁移任务会占用迁出节点与迁入节点的
 
       语句如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM MIGRATE UNIT = unit_id DESTINATION = 'svr_ip:svr_port'; 
       ```
 
@@ -112,7 +112,7 @@ Unit 自动迁移过程中，迁移任务会占用迁出节点与迁入节点的
 
       将 ID 为 `1012` 的 Unit 迁移到同 Zone 的 `172.xx.xx.xx` 服务器上的示例如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM MIGRATE UNIT = 1012 DESTINATION = '172.xx.xx.xx:2882'; 
       ```
 
