--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/7.replace-a-node.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/7.replace-a-node.md
@@ -24,7 +24,7 @@
 
       查询示例如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
       +-------------+----------+----+--------------+----------+-----------------+--------+----------------------------+-----------+-----------------------+----------------------------+----------------------------+-------------------------------------------------------------------------------------------+
       | SVR_IP      | SVR_PORT | ID | ZONE         | SQL_PORT | WITH_ROOTSERVER | STATUS | START_SERVICE_TIME         | STOP_TIME | BLOCK_MIGRATE_IN_TIME | CREATE_TIME                | MODIFY_TIME                | BUILD_VERSION                                                                             |
