--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/8.add-a-zone.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/8.add-a-zone.md
@@ -18,7 +18,7 @@
 
    语句如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM ADD ZONE zone_name [IDC [=] 'idc_name', REGION [=] 'region_name', ZONE_TYPE [=] 'ReadWrite'];
    ```
 
@@ -34,13 +34,13 @@
 
    在集群中增加 `zone4` 的示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM ADD ZONE zone4 IDC 'hz1', REGION 'hangzhou';
    ```
 
 3. 操作成功后，可以查询 `oceanbase.DBA_OB_ZONES` 视图进行确认。
 
-   ```sql
+   ```shell
    obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_ZONES;
    +-------+----------------------------+----------------------------+----------+-----+----------+-----------+
    | ZONE  | CREATE_TIME                | MODIFY_TIME                | STATUS   | IDC | REGION   | TYPE      |
@@ -61,7 +61,7 @@
 
    语句如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM START ZONE zone_name;
    ```
 
@@ -69,7 +69,7 @@
 
    示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM START ZONE zone4;
    Query OK, 0 rows affected
 
