--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/8.1.start-a-zone.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/8.1.start-a-zone.md
@@ -26,7 +26,7 @@
 
    语句如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM START ZONE zone_name;
    ```
 
@@ -34,14 +34,14 @@
 
    示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM START ZONE zone4;
    Query OK, 0 rows affected
    ```
 
 3. 操作成功后，可以查询 `oceanbase.DBA_OB_ZONES` 视图进行确认。
 
-   ```sql
+   ```shell
    obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_ZONES;
    +-------+----------------------------+----------------------------+--------+-----+----------+-----------+
    | ZONE  | CREATE_TIME                | MODIFY_TIME                | STATUS | IDC | REGION   | TYPE      |
