--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/9.delete-a-zone.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/9.delete-a-zone.md
@@ -12,7 +12,7 @@
 
   停止 Zone 的语句如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM STOP ZONE zone_name;
    ```
 
@@ -20,7 +20,7 @@
 
    示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM STOP ZONE zone4;
    ```
 
@@ -40,7 +40,7 @@
 
    语句如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM DELETE ZONE zone_name;
    ```
 
@@ -48,13 +48,13 @@
 
    删除集群中的 `zone4` 的示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM DELETE ZONE zone4;
    ```
 
 3. 操作成功后，可以查询 `oceanbase.DBA_OB_ZONES` 视图进行确认。
 
-   ```sql
+   ```shell
    obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_ZONES;
    +-------+----------------------------+----------------------------+--------+-----+----------+-----------+
    | ZONE  | CREATE_TIME                | MODIFY_TIME                | STATUS | IDC | REGION   | TYPE      |
