--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/6.view-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/6.view-system-variables-of-tenant.md
@@ -65,7 +65,7 @@
 
 * MySQL 模式
 
-  1. 使用 root 用户登录到集群的 mysql001 租户。
+  1. 使用 root 用户登录到集群的 `mysql001` 租户。
 
       ```shell
       obclient -P2881 -h172.30.xx.xx -uroot@mysql001#cluster -p**** -A -Doceanbase
