--- a/zh-CN/6.manage/3.replica-management/1.replica-introduction.md
+++ b/zh-CN/6.manage/3.replica-management/1.replica-introduction.md
@@ -10,7 +10,7 @@
 
 <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>OceanBase 数据库以多副本架构著称，基于 Paxos 协议的多副本架构是高可用能力的基础。多副本中的”副本”本质是同一份数据在不同节点的拷贝，而数据在 OceanBase 数据库中有多种层面的承载容器，例如数据分区、日志流、Unit、租户等。一般情况下我们提及的“副本”往往是指“数据分区副本”。但需要注意的是，不同语境下的“副本”可能对应着不同的数据库实体。</p>
+    <p>OceanBase 数据库以多副本架构著称，基于 Paxos 协议的多副本架构是高可用能力的基础。多副本中的“副本”本质是同一份数据在不同节点的拷贝，而数据在 OceanBase 数据库中有多种层面的承载容器，例如数据分区、日志流、Unit、租户等。一般情况下我们提及的“副本”往往是指“数据分区副本”。但需要注意的是，不同语境下的“副本”可能对应着不同的数据库实体。</p>
 </main>
 
 ## 副本的作用
@@ -25,7 +25,7 @@ OceanBase 数据库的存储引擎采用分层 LSM-Tree 结构，数据分为两
 
 基线数据是持久到磁盘上的数据，一旦生成就不会再修改，称之为 SSTable。
 
-增量数据存在于内存，用户写入都是先写到增量数据，称之为 MemTable，通过 RedoLog 来保证事务性（也称为 CommitLog，简称 CLog ）。
+增量数据存在于内存，用户写入都是先写到增量数据，称之为 MemTable，通过 RedoLog 来保证事务性（也称为 CommitLog，简称 CLog）。
 
 这些数据冗余有多份（例如，同城三中心部署架构为 3 个，三地五中心部署架构为 5 个），分布于多个节点上。事务提交时利用 Paxos 协议在多个节点间同步 RedoLog 达成多数派提交，从而维护副本间数据的一致性。
 
