--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/1.locality-overview.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/1.locality-overview.md
@@ -1,10 +1,10 @@
 # Locality 介绍
 
-为了描述数据的多个副本的类型及分布策略，我们引入了 Locality 的概念。OceanBase 数据库 4.0 仅支持租户级别的 Locality，不再支持表级、DB 级、Table Group 级配置 Locality 。
+为了描述数据的多个副本的类型及分布策略，我们引入了 Locality 的概念。OceanBase 数据库 4.0 仅支持租户级别的 Locality，不再支持表级、DB 级、Table Group 级配置 Locality。
 
 副本指的是数据，而 Locality 描述的对象是承载数据的容器，从而该容器下的数据具有容器的 Locality 属性所描述的类型及分布策略。
 
-OceanBase 数据库 4.0 仅支持租户级别的 Locality，而 OceanBase 数据库 3.x 还支持表级、DB 级、Table Group 级配置 Locality 。
+OceanBase 数据库 4.0 仅支持租户级别的 Locality，而 OceanBase 数据库 3.x 还支持表级、DB 级、Table Group 级配置 Locality。
 
 ## Locality 语法
 
@@ -44,15 +44,15 @@ obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS limit 10;
 
 下述示例展示了在一个拥有五个 Zone（z1~z5）的 OceanBase 集群中，可以容纳不同 Locality 的多个租户和它们的 Locality 情况：
 
-* sys tenant 的 Locality：F@z1,F@z2,F@z3,F@z4,F@z5。
+* sys tenant 的 Locality：`F@z1,F@z2,F@z3,F@z4,F@z5`。
   
   表示系统租户在 `z1,z2,z3,z4,z5` 上各存在一个全能型副本。
 
-* tenant1 的 Locality：F@z1,F@z2,F@z3。
+* tenant1 的 Locality：`F@z1,F@z2,F@z3`。
   
   表示租户 tenant1 在 `z1,z2,z3` 上各存在一个全能型副本。
 
-* tenant2 的 Locality：F@z3,F@z4,F@z5。
+* tenant2 的 Locality：`F@z3,F@z4,F@z5`。
   
   表示租户 tenant2 在 `z3,z4,z5` 上存在一个全能型副本。
 
@@ -62,11 +62,11 @@ obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS limit 10;
 
 ## Locality 属性与高可用架构
 
-多副本架构是 OceanBase 相比于传统数据库的架构优势，多副本架构是 OceanBase 具备多级无损容灾能力的基础，包括单机级无损容灾、机房级无损容灾、城市级无损容灾等能力。OceanBase 支持灵活的调整集群部署架构，从而可以满足业务场景的技术演进。
+多副本架构是 OceanBase 数据库相比于传统数据库的架构优势，多副本架构是 OceanBase 数据库具备多级无损容灾能力的基础，包括单机级无损容灾、机房级无损容灾、城市级无损容灾等能力。OceanBase 数据库支持灵活的调整集群部署架构，从而可以满足业务场景的技术演进。
 
-OceanBase 的灵活的部署架构正是通过 Locality 属性体现的，Locality 除了描述副本类型，还描述了副本在 Zone 间的分布策略。Zone 具有 Region 属性，可通过 `oceanbase.DBA_OB_ZONES` 视图的 `REGION` 字段查看，描述了该 Zone 的地域分布。通过调整租户的多个副本在不同 Region 的 不同 Zone 间的分布，从而达到灵活的部署模式。
+OceanBase 数据库的灵活的部署架构正是通过 Locality 属性体现的，Locality 除了描述副本类型，还描述了副本在 Zone 间的分布策略。Zone 具有 Region 属性，可通过 `oceanbase.DBA_OB_ZONES` 视图的 `REGION` 字段查看，描述了该 Zone 的地域分布。通过调整租户的多个副本在不同 Region 的 不同 Zone 间的分布，从而达到灵活的部署模式。
 
-OceanBase 典型的部署模式有三种，分别是同城三中心、两地五中心、三地五中心，其 Locality 属性举例如下：
+OceanBase 数据库典型的部署模式有三种，分别是同城三中心、两地五中心、三地五中心，其 Locality 属性举例如下：
 
 | 部署模式 | Locality 属性 | Zone 分布 |
 | --- | --- | --- |
