--- a/zh-CN/6.manage/4.high-availability/2.multi-replica-disaster-recovery/3.database-high-availability.md
+++ b/zh-CN/6.manage/4.high-availability/2.multi-replica-disaster-recovery/3.database-high-availability.md
@@ -67,7 +67,7 @@ ODP 会感知 OBServer 的异常状态，例如 stopped（`ACTIVE` 状态且 `st
 
 2. 获取租户的 Zone、Server 及日志流副本信息。
 
-   ```sql
+   ```shell
    obcllient [(none)]> SELECT a.TENANT_ID,a.LS_ID,a.SVR_IP,a.SVR_PORT,a.ZONE,a.role,b.TENANT_NAME,b.TENANT_TYPE FROM oceanbase.CDB_OB_LS_LOCATIONS a, oceanbase.DBA_OB_TENANTS b WHERE a.TENANT_ID=b.TENANT_ID;
    +-----------+-------+----------------+----------+-------+----------+-------------+-------------+
    | TENANT_ID | LS_ID | SVR_IP         | SVR_PORT | ZONE  | role     | TENANT_NAME | TENANT_TYPE |
@@ -122,7 +122,7 @@ ODP 会感知 OBServer 的异常状态，例如 stopped（`ACTIVE` 状态且 `st
 
       示例如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM SWITCH REPLICA LEADER LS = 1001 SERVER = 'xx.xx.xx.218:2882' TENANT = oracle001;
       ```
 
@@ -142,13 +142,13 @@ ODP 会感知 OBServer 的异常状态，例如 stopped（`ACTIVE` 状态且 `st
 
       示例如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM SWITCH REPLICA LEADER SERVER = 'xx.xx.xx.218:2882' TENANT = oracle001;
       ```
 
    * 修改某个 Zone 中所有副本的角色。
 
-      ```sql
+      ```shell
       ALTER SYSTEM SWITCH REPLICA role ZONE [=] zone_name [TENANT = tenant_name];
       ```
 
@@ -160,13 +160,13 @@ ODP 会感知 OBServer 的异常状态，例如 stopped（`ACTIVE` 状态且 `st
 
       * `tenant_name`：待修改的日志流副本所属的租户，可选。
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM SWITCH REPLICA LEADER ZONE = zone1 ;
       ```
 
 4. 操作结束后，可以再次查询视图，确认副本角色是否修改成功。
 
-   ```sql
+   ```shell
    obclient [(none)]> SELECT * FROM oceanbase.CDB_OB_LS_LOCATIONS WHERE TENANT_ID = 1010;
    +----------------------------+----------------------------+-----------+-------+----------------+----------+----------+-------+----------+-------------------------------------------------------------------+----------------------+--------------+
    | CREATE_TIME                | MODIFY_TIME                | TENANT_ID | LS_ID | SVR_IP         | SVR_PORT | SQL_PORT | ZONE  | ROLE     | MEMBER_LIST                                                       | PAXOS_REPLICA_NUMBER | REPLICA_TYPE |
