--- a/zh-CN/6.manage/4.high-availability/4.flashback-query.md
+++ b/zh-CN/6.manage/4.high-availability/4.flashback-query.md
@@ -41,7 +41,7 @@ OceanBase 数据库当前支持用户通过设置租户级配置项 `undo_retent
 
    示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM SET undo_retention=900;
    ```
 
@@ -63,7 +63,7 @@ OceanBase 数据库当前支持用户通过设置租户级配置项 `undo_retent
 
    假设当前 `undo_retention` 设置的值为 `900`，用户有一个表 `table1`。通过 `AS OF SNAPSHOT` 指定历史时间并闪回查询单表在该历史时间点的状态的数据的示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> SELECT * FROM table1 AS OF SNAPSHOT 1597306800000000000;
    ```
 
@@ -71,7 +71,7 @@ OceanBase 数据库当前支持用户通过设置租户级配置项 `undo_retent
 
    例如，本示例中，需要闪回查询 2020 年 08 月 13 日 16 点 20 分 00 秒的表数据，转换时间的方法如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> SELECT time_to_usec('2020-08-13 16:20:00') * 1000;
    +--------------------------------------------+
    | time_to_usec('2022-01-01 00:00:00') * 1000 |
@@ -99,19 +99,19 @@ OceanBase 数据库当前支持用户通过设置租户级配置项 `undo_retent
 
    * 通过 `TIMESTAMP` 指定的历史时间并闪回查询一张单表在该历史时间中的状态的数据。
 
-     ```sql
+     ```shell
      obclient [SYS]> SELECT * FROM table1 AS OF TIMESTAMP TO_TIMESTAMP('2020-08-13 16:20:00','yyyy-mm-dd hh24:mi:ss');
      ```
 
    * 通过 `TIMESTAMP` 指定的历史时间并闪回查询多表在该历史时间中的状态的数据。
 
-     ```sql
+     ```shell
      obclient [SYS]> SELECT * FROM table1 AS OF TIMESTAMP expr1,table2 AS OF TIMESTAMP TO_TIMESTAMP('2020-08-13 16:20:00','yyyy-mm-dd hh24:mi:ss');
      ```
 
    * 通过 `SCN` 指定历史时间并闪回查询单表在该历史时间点的状态的数据。
 
-     ```sql
+     ```shell
      obclient [SYS]> SELECT * FROM table1 AS OF SCN 1597306800000000000;
      ```
 
@@ -119,7 +119,7 @@ OceanBase 数据库当前支持用户通过设置租户级配置项 `undo_retent
 
      例如，本示例中，需要闪回查询 2020 年 08 月 13 日 16 点 20 分 00 秒的表数据，转换时间的方法如下：
 
-     ```sql
+     ```shell
      obclient [(none)]> SELECT (to_date('2020-08-13 16:20:00','yyyy-mm-dd hh24:mi:ss') - to_date('1970-01-01 08:00:00', 'yyyy-mm-dd hh24:mi:ss')) * 86400 * 1000 * 1000 * 1000 AS unix_nsec_timestamp FROM DUAL;
      +---------------------+
      | UNIX_NSEC_TIMESTAMP |
