--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/2.authority-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/2.authority-of-mysql-mode.md
@@ -91,13 +91,13 @@ user_name [IDENTIFIED BY [PASSWORD] 'password']
 
   * 将所有数据库的所有对象的权限授予用户 `test`。
 
-    ```sql
+    ```shell
     obclient> GRANT ALL ON *.* TO test;
     ```
 
   * 将所有数据库中所有表的 `INSERT` 、`SELECT` 权限授予用户 `test`。
 
-    ```sql
+    ```shell
     obclient> GRANT SELECT, INSERT ON *.* TO test;
     ```
 
@@ -107,13 +107,13 @@ user_name [IDENTIFIED BY [PASSWORD] 'password']
 
   * 将数据库 `db1` 的所有对象的操作权限授予用户 `test`。
 
-    ```sql
+    ```shell
     obclient> GRANT ALL ON db1.* TO test;
     ```
 
   * 将数据库 `db1` 的所有表的 `INSERT` 、`SELECT` 权限授予用户 `test`。
 
-    ```sql
+    ```shell
     obclient> GRANT SELECT, INSERT ON db1.* TO test;
     ```
 
@@ -123,13 +123,13 @@ user_name [IDENTIFIED BY [PASSWORD] 'password']
 
   * 将数据库 `db1` 的表 `tb1_name` 的 `INSERT` 、`SELECT` 权限授予用户 `test`。
 
-    ```sql
+    ```shell
     obclient> GRANT SELECT, INSERT ON db1.tb1_name TO test; 
     ```
 
   * 将数据库 `db1` 的表 `tb1_name` 的操作权限授予用户 `test`。
 
-    ```sql
+    ```shell
     obclient> GRANT ALL ON db1.tb1_name TO test;
     ```
 
