--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/2.authority-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/2.authority-of-oracle-mode.md
@@ -29,7 +29,7 @@
 
   将系统权限 `CREATE SEQUENCE` 授予用户 `test`。
 
-  ```sql
+  ```shell
   obclient> GRANT CREATE SEQUENCE TO test;
   ```
 
@@ -37,7 +37,7 @@
 
   将视图 `emp_view` 的 `SELECT` 、`UPDATE` 权限授予用户 `test`。
 
-  ```sql
+  ```shell
   obclient> GRANT SELECT, UPDATE ON emp_view TO test;
   ```
 
