--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/6.view-user-permissions-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/6.view-user-permissions-of-oracle-mode.md
@@ -12,7 +12,7 @@
 
      管理员可以通过 `DBA_SYS_PRIVS` 视图查看某个用户被授予的系统权限。
 
-     ```sql
+     ```shell
      obclient> SELECT * FROM DBA_SYS_PRIVS WHERE grantee='SECUSER';
      +---------+-----------------+--------------+
      | GRANTEE | PRIVILEGE       | ADMIN_OPTION |
@@ -28,7 +28,7 @@
 
      普通用户和管理员都可以通过 `USER_SYS_PRIVS` 视图查看自己被授予的系统权限。
 
-     ```sql
+     ```shell
      obclient> SELECT * FROM USER_SYS_PRIVS;
      +----------+----------------+--------------+
      | USERNAME | PRIVILEGE      | ADMIN_OPTION |
@@ -45,7 +45,7 @@
 
      管理员可以通过 `DBA_TAB_PRIVS` 视图查看某个用户被授予的对象权限。
 
-     ```sql
+     ```shell
      obclient> SELECT * FROM DBA_TAB_PRIVS WHERE grantee='SECUSER';
      +---------+-------+------------+---------+-----------+-----------+-----------+
      | GRANTEE | OWNER | TABLE_NAME | GRANTOR | PRIVILEGE | GRANTABLE | HIERARCHY |
@@ -62,7 +62,7 @@
 
      普通用户和管理员都可以通过 `USER_TAB_PRIVS` 视图查看当前自己被授予的对象权限。
 
-     ```sql
+     ```shell
      obclient> SELECT * FROM USER_TAB_PRIVS;
      +---------+-------+-----------------+---------+-----------+-----------+-----------+
      | GRANTEE | OWNER | TABLE_NAME      | GRANTOR | PRIVILEGE | GRANTABLE | HIERARCHY |
@@ -78,7 +78,7 @@
 
      管理员可以通过 `DBA_ROLE_PRIVS` 视图查看某个用户所拥有的角色。
 
-     ```sql
+     ```shell
      obclient> SELECT * FROM DBA_ROLE_PRIVS WHERE grantee='USER2';
      +---------+--------------+--------------+--------------+
      | GRANTEE | GRANTED_ROLE | ADMIN_OPTION | DEFAULT_ROLE |
@@ -96,7 +96,7 @@
 
      管理员和普通用户都可以通过 `USER_ROLE_PRIVS` 视图查看自己被授予的角色。
 
-     ```sql
+     ```shell
      obclient> SELECT * FROM USER_ROLE_PRIVS;
      +---------+--------------+--------------+--------------+
      | GRANTEE | GRANTED_ROLE | ADMIN_OPTION | DEFAULT_ROLE |
