--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/5.audit-records.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/5.audit-records.md
@@ -60,7 +60,7 @@ PROXY CLIENT ADDRESS:[13] 'xx.xx.xx.xx'
 
 查看 `DBA_AUDIT_TRAIL` 中的审计记录。示例如下：
 
-```sql
+```shell
 obclient> SELECT USERNAME,USERHOST,TIMESTAMP,SQL_TEXT FROM SYS.DBA_AUDIT_TRAIL;
 +----------+-------------+-----------+-----------------------------------------------------------------+
 | USERNAME | USERHOST | TIMESTAMP | SQL_TEXT |
