--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/4.stop-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/4.stop-log-archive.md
@@ -4,11 +4,11 @@
 
 ## 前提条件
 
-关闭日志归档前，请确认待关闭日志归档的租户的日志归档状态机处于处于 `PREPARE` 、 `BEGINNING` 、 `DOING` 或 `INTERRUPTED` 这 4 种状态中的任意一个状态。日志归档状态机相关说明请参见 [日志归档概述](1.overview-of-log-archive.md)。
+关闭日志归档前，请确认待关闭日志归档的租户的日志归档状态机处于处于 `PREPARE`、`BEGINNING`、`DOING` 或 `INTERRUPTED` 这 4 种状态中的任意一个状态。日志归档状态机相关说明请参见 [日志归档概述](1.overview-of-log-archive.md)。
 
 ## 背景信息
 
-假设当前集群中有 3 个租户，分别是 `sys` ，`mysql_tenant` 和 `oracle_tenant`，且租户 `mysql_tenant` 和 `oracle_tenant` 均正在进行日志归档。
+假设当前集群中有 3 个租户，分别是 `sys`、`mysql_tenant` 和 `oracle_tenant`，且租户 `mysql_tenant` 和 `oracle_tenant` 均正在进行日志归档。
 
 ## 系统租户关闭日志归档
 
@@ -22,7 +22,7 @@
 
         该方式会关闭集群中所有租户的日志归档。
 
-        ```sql
+        ```shell
         obclient [(none)]> ALTER SYSTEM NOARCHIVELOG TENANT=ALL;
         ```
 
@@ -30,7 +30,7 @@
 
         该方式仅关闭指定租户的日志归档，不会影响集群中的其他租户。
 
-        ```sql
+        ```shell
         obclient [(none)]> ALTER SYSTEM NOARCHIVELOG TENANT=MYSQL_TENANT;
        ```
 
@@ -49,7 +49,7 @@
 
 2. 执行以下语句，关闭日志归档。
 
-    ```sql
+    ```shell
     obclient [xxx]> ALTER SYSTEM NOARCHIVELOG;
     ```
 
