--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
@@ -37,7 +37,7 @@
 
       设置备份目的端的示例如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> ALTER SYSTEM SET data_backup_dest='file:///data/nfs/backup/data';
       ```
 
@@ -70,7 +70,7 @@
 
 3. 配置成功后，`sys` 租户可通过视图 `CDB_OB_BACKUP_PARAMETER` 查看当前集群中各租户的备份路径等信息。
 
-   ```sql
+   ```shell
    obclient> SELECT * FROM oceanbase.CDB_OB_BACKUP_PARAMETER\G
    *************************** 1. row ***************************
    TENANT_ID: 1002
