--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/5.view-data-backup-progress.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/5.view-data-backup-progress.md
@@ -12,7 +12,7 @@
 
    示例如下：
 
-      ```sql
+      ```shell
       obclient> SELECT * FROM oceanbase.CDB_OB_BACKUP_JOBS\G
       *************************** 1. row ***************************
                 TENANT_ID: 1
