--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/6.view-data-backup-history.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/6.view-data-backup-history.md
@@ -10,7 +10,7 @@
 
     示例如下：
 
-    ```sql
+    ```shell
     obclient> SELECT * FROM oceanbase.CDB_OB_BACKUP_JOB_HISTORY\G
     *************************** 1. row ***************************
               TENANT_ID: 1
@@ -90,7 +90,7 @@
 
 3. 查看对应的备份集信息。
 
-   ```sql
+   ```shell
    obclient> SELECT * FROM oceanbase.CDB_OB_BACKUP_SET_FILES WHERE backup_set_id = 1 AND tenant_id = 1004\G
    *************************** 1. row ***************************
                     TENANT_ID: 1002
