--- a/zh-CN/6.manage/6.backup-and-recovery/5.clear-backup-data/1.cleaning-up-backed-up-data-automatically.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/5.clear-backup-data/1.cleaning-up-backed-up-data-automatically.md
@@ -34,7 +34,7 @@
 
    示例如下：
 
-   ```sql
+   ```shell
    obclient> ALTER SYSTEM ADD DELETE BACKUP POLICY 'default' RECOVERY_WINDOW '7d';
    ```
 
@@ -65,7 +65,7 @@
 
    系统租户为 `MySQL` 租户指定清理策略的示例如下：
 
-   ```sql
+   ```shell
    obclient> ALTER SYSTEM ADD DELETE BACKUP POLICY 'default' RECOVERY_WINDOW '7d' TENANT MySQL;
    ```
 
@@ -81,7 +81,7 @@
 
       示例如下：
 
-      ```sql
+      ```shell
       obclient> SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_POLICY;
       +-----------+-------------+-----------------+
       | TENANT_ID | POLICY_NAME | RECOVERY_WINDOW |
@@ -95,7 +95,7 @@
 
       * MySQL 租户
 
-        ```sql
+        ```shell
         obclient> SELECT * FROM oceanbase.DBA_OB_BACKUP_DELETE_POLICY;
         +-------------+-----------------+
         | POLICY_NAME | RECOVERY_WINDOW |
@@ -107,7 +107,7 @@
 
       * Oracle 租户
 
-        ```sql
+        ```shell
         obclient> SELECT * FROM sys.DBA_OB_BACKUP_DELETE_POLICY;
         +-------------+-----------------+
         | POLICY_NAME | RECOVERY_WINDOW |
