--- a/zh-CN/6.manage/6.backup-and-recovery/5.clear-backup-data/3.view-cleaning-backup-progress.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/5.clear-backup-data/3.view-cleaning-backup-progress.md
@@ -14,7 +14,7 @@
 
       系统租户查看所有租户清理任务进展的示例如下：
 
-      ```sql
+      ```shell
       obclient> SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_JOBS\G
       *************************** 1. row ***************************
                      TENANT_ID: 1002
@@ -44,7 +44,7 @@
 
       系统租户查看所有租户 `backup_set/backup_piece` 清理任务的进展的示例如下：
 
-      ```sql
+      ```shell
       obclient> SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_TASKS\G
       *************************** 1. row ***************************
                TENANT_ID: 1002
