--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/4.view-the-restore-progress.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/4.view-the-restore-progress.md
@@ -8,13 +8,13 @@
 
 2. 进入 `oceanbase` 数据库。
 
-   ```sql
+   ```shell
    obclient [(none)]> USE oceanbase;
    ```
 
 3. 执行以下语句，查看恢复进度。  
 
-   ```sql
+   ```shell
    obclient [oceanbase]> SELECT * FROM CDB_OB_RESTORE_PROGRESS\G
    *************************** 1. row ***************************
                          TENANT_ID: 1
