--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/6.active-standby-tenant.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/6.active-standby-tenant.md
@@ -31,7 +31,7 @@
 
    示例如下:
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM ACTIVATE STANDBY TENANT mysql;
    ```
 
@@ -52,6 +52,6 @@
 
    语句如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM ACTIVATE STANDBY;
    ```
