--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/13.restore-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/13.restore-tenant.md
@@ -1,8 +1,12 @@
 # 恢复租户
 
-为防止恶意或误操作导致的数据不可恢复性丢失，OceanBase 数据库提供了租户级的回收站功能，从而支持租户级的数据的快速恢复功能。本文介绍如何恢复回收站的租户。
+为防止恶意或误操作导致的数据不可恢复性丢失，OceanBase 数据库提供了回收站功能，从而支持租户级的数据的快速恢复功能。本文介绍如何恢复回收站中的租户。
 
 OceanBase 数据库可以通过 `FLASHBACK TENANT` 语句恢复回收站中的租户。
+
+## 使用限制
+
+由于当前仅 `sys` 租户可以删除租户，故 MySQL 模式和 Oracle 模式的租户被删除后，只能进入 `sys` 租户的回收站中。也只有 `sys` 租户可以执行恢复租户的操作。
 
 ## 操作步骤
 
