--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/9.modify-resource-pool-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/9.modify-resource-pool-properties.md
@@ -1,6 +1,6 @@
 # 修改资源池属性
 
-修改资源池属性，即是调整资源池配置的 UNIT、UNIT_NUM、ZONE_LIST 等参数信息。本文介绍如何修改资源池属性。
+修改资源池属性，即是调整资源池配置的 `UNIT`、`UNIT_NUM`、`ZONE_LIST` 等参数信息。本文介绍如何修改资源池属性。
 
 资源池属性可以通过 `ALTER RESOURCE POOL` 语句进行修改。
 
