--- a/zh-CN/6.manage/4.high-availability/3.recyclebin-management/5.purge-the-recyclebin.md
+++ b/zh-CN/6.manage/4.high-availability/3.recyclebin-management/5.purge-the-recyclebin.md
@@ -78,7 +78,7 @@
   
      仅 `sys` 租户和 MySQL 用户租户支持清理回收站中的数据库对象。
 
-     ```shell
+     ```sql
      obclient> PURGE DATABASE object_name;
      ```
 
