--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md
@@ -12,7 +12,7 @@
 
      示例如下：
 
-     ```sql
+     ```shell
      obclient> SHOW GRANTS FOR test;
      +----------------------------------------+
      | Grants for test@%                     |
@@ -29,7 +29,7 @@
 
      示例如下：
 
-     ```sql
+     ```shell
      obclient> SELECT * FROM mysql.user WHERE user='test'\G;
      *************************** 1. row ***************************
                        host: %
@@ -84,7 +84,7 @@
 
      管理员可以通过 `mysql.db` 视图查看某个用户所拥有的数据库级权限。普通用户可以通过 `mysql.db` 视图查看自己所拥有的数据库级权限。
 
-     ```sql
+     ```shell
      obclient> SELECT * FROM mysql.db WHERE user='test'\G;
      *************************** 1. row ***************************
                       host: %
@@ -120,5 +120,4 @@
 
 * [用户及权限概述](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md)
 
-* [修改用户权限](../2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md
-)
+* [修改用户权限](../2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md)
