--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/5.indirect-authority-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/5.indirect-authority-of-oracle-mode.md
@@ -19,18 +19,19 @@
 
 将表 `test1.tbl1` 的 `SELECT` 对象权限授予角色 `role1`。
 
-```sql
+```shell
 obclient> GRANT SELECT ON test1.tbl1 TO role1;
 Query OK, 0 rows affected
 ```
 
 此外，您也可以向 `PUBLIC` 角色中添加权限，SQL 语句如下：
 
->**注意**
->
->为了数据库安全，OceanBase 数据库建议您根据自身业务需求来合理授权，请勿随意将该角色赋予用户。
+<main id="notice" type='notice'>
+    <h4>注意</h4>
+    <p>为了数据库安全，OceanBase 数据库建议您根据自身业务需求来合理授权，请勿随意将该角色赋予用户。</p>
+</main>
 
-```sql
+```shell
 obclient> GRANT [privilege_list] TO PUBLIC;
 ```
 
