--- a/zh-CN/6.manage/5.security-and-permissions/4.data-transfer-encryption/2.observer-in-transmission-encryption.md
+++ b/zh-CN/6.manage/5.security-and-permissions/4.data-transfer-encryption/2.observer-in-transmission-encryption.md
@@ -29,7 +29,7 @@ OBServer 传输加密的开启通过多个配置项配合使用。
 4. 配置 RPC 通信的 SSL 白名单，由于 OBServer 之间 TCP 连接都是长连接，因此需要重启 OBServer 后 RPC SSL 加密通信才能开启。
 
    ```sql
-   rpc通信ssl需要配置白名单
+   rpc 通信 ssl 需要配置白名单
    alter system set _ob_ssl_invited_nodes='ALL'; 整个集群都开启
    alter system set _ob_ssl_invited_nodes='135.xxx.xx.xx, 128.xxx.xx.xx'; 指定 ip 的 observer 开启
    ssl
@@ -39,7 +39,7 @@ OBServer 传输加密的开启通过多个配置项配合使用。
 
 最简单的方法是对 MySQL 端口和 RPC 端口进行抓包，查看是否开启加密，此外可以通过以下方式：
 
-* OBClient/MySQL 登陆 OBServer，系统租户检索 `oceanbase.GV$OB_SERVERS` 视图的 `ssl_cert_expired_time` 字段确认是否开启。
+* OBClient/MySQL 客户端登录 OBServer，系统租户检索 `oceanbase.GV$OB_SERVERS` 视图的 `ssl_cert_expired_time` 字段确认是否开启。
 
 * 该字段记录当前 OBServer 开启 SSL 时，当前 OBServer 使用的 SSL 证书过期时间， utc 时间，单位微秒。
 
@@ -55,7 +55,7 @@ OBServer 传输加密的开启通过多个配置项配合使用。
 
 ### 检查 MySQL 端口是否开启 SSL
 
-通过 MySQL/OBClient 登录，执行`\s`查看 SSL 字段的示例如下：
+通过 MySQL 客户端/OBClient 登录，执行`\s`查看 SSL 字段的示例如下：
 
 ```shell
 obclient> \s
