--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/3.initiate-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/3.initiate-log-archive.md
@@ -22,7 +22,7 @@
 
     该方式会对集群当前的所有租户发起日志归档。需要特别注意的是，对于该操作之后创建的租户，系统不会自动发起日志归档。
 
-    ```sql
+    ```shell
     obclient [(none)]> ALTER SYSTEM ARCHIVELOG TENANT=ALL;
     ```
 
@@ -34,7 +34,7 @@
 
     对 `mysql_tenant` 租户发起日志归档的示例如下：
 
-    ```sql
+    ```shell
     obclient [(none)]> ALTER SYSTEM ARCHIVELOG TENANT=MYSQL_TENANT;
     ```
 
@@ -57,7 +57,7 @@
 
 2. 执行以下语句，开启日志归档。
 
-    ```sql
+    ```shell
     obclient [xxx]> ALTER SYSTEM ARCHIVELOG;
     ```
 
