--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/4.stop-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/4.stop-data-backup.md
@@ -22,7 +22,7 @@
 
        该方式会停止集群中所有租户的数据备份任务。
 
-       ```sql
+       ```shell
        obclient [(none)]> ALTER SYSTEM CANCEL BACKUP;
        ```
 
@@ -30,7 +30,7 @@
 
         该方式仅停止指定租户正在执行的数据备份任务，不会影响集群中的其他租户。
 
-        ```sql
+        ```shell
         obclient [(none)]> ALTER SYSTEM CANCEL BACKUP TENANT = mysql_tenant;
         ```
 
@@ -49,7 +49,7 @@
 
 2. 执行以下语句，停止数据备份。
 
-    ```sql
+    ```shell
     obclient [(none)]> ALTER SYSTEM CANCEL BACKUP;
     ```
 
