--- a/zh-CN/6.manage/6.backup-and-recovery/5.clear-backup-data/2.stop-cleaning-backup-data.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/5.clear-backup-data/2.stop-cleaning-backup-data.md
@@ -16,7 +16,7 @@
 
 2. 执行以下语句，删除清理策略。
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM DROP DELETE BACKUP POLICY policy_name TENANT tenant_name;
    ```
 
@@ -28,7 +28,7 @@
 
    系统租户取消 `MySQL` 租户的清理策略 `default` 的示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM DROP DELETE BACKUP POLICY 'default' TENANT MySQL;
    ```
 
@@ -102,7 +102,7 @@
 
 2. 执行以下语句，停止当前租户正在执行的清理任务。
 
-   ```sql
+   ```shell
    obclient [(none)]>  ALTER SYSTEM CANCEL DELETE BACKUP;
    ```
 
@@ -112,7 +112,7 @@
 
 2. 执行以下语句，停止指定租户正在执行的清理任务。
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM CANCEL DELETE BACKUP TENANT tenant_name_list;
    ```
 
@@ -120,13 +120,13 @@
 
    系统租户取消 `MySQL` 租户和 `Oracle` 租户上正在执行的清理任务。示例如下：
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM CANCEL DELETE BACKUP TENANT MySQL, Oracle;
    ```
 
    如果不指定 `TENANT` 参数，则表示同时取消所有用户租户下正在执行的清理任务。
 
-   ```sql
+   ```shell
    obclient [(none)]> ALTER SYSTEM CANCEL DELETE BACKUP;
    ```
 
@@ -144,7 +144,7 @@
 
       系统租户查看指定租户清理任务执行情况的示例如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_JOBS WHERE tenant_id = 1002\G
       *************************** 1. row ***************************
                       TENANT_ID: 1002
@@ -170,7 +170,7 @@
 
       如果出现如下情况，上述视图中查询不到租户正在执行的清理任务，则可以执行下一步，查看清理任务的历史记录来确认清理任务执行的结果。
 
-      ```sql
+      ```shell
       obclient [(none)]> SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_JOBS where tenant_id = 1002;
       Empty set
       ```
@@ -181,7 +181,7 @@
 
       系统租户查看指定租户清理任务的历史记录的示例如下：
 
-      ```sql
+      ```shell
       obclient [(none)]> SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_JOB_HISTORY where tenant_id = 1002\G
       *************************** 1. row ***************************
                      TENANT_ID: 1002
