--- a/zh-CN/6.manage/6.backup-and-recovery/5.clear-backup-data/4.view-cleaning-backup-history.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/5.clear-backup-data/4.view-cleaning-backup-history.md
@@ -14,7 +14,7 @@
 
       系统租户查看 Job 级清理任务的历史记录的示例如下：
 
-      ```sql
+      ```shell
       obclient> SELECT * FROM CDB_OB_BACKUP_DELETE_JOB_HISTORY\G
       *************************** 1. row ***************************
                      TENANT_ID: 1002
@@ -44,7 +44,7 @@
 
       系统租户查看 `backup_set/backup_piece` 清理任务的历史记录的示例如下：
 
-      ```sql
+      ```shell
       obclient> SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_TASK_HISTORY\G
       *************************** 1. row ***************************
                TENANT_ID: 1002
