不规范词修复

--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/5.user-password-error-with-error-code-1045-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/5.user-password-error-with-error-code-1045-of-mysql-mode.md
@@ -26,7 +26,7 @@ ERROR 1045 (42000): Access denied for user 'ny1'@'xxx.xxx.xxx.xxx' (using passwo
 
 请参考以下步骤，修改用户密码后，重新登录。
 
-1. 使用管理员用户登录到相应的租户。使用管理员用户登录到相应的租户。
+1. 使用管理员用户登录到集群相应的租户。
 
    <main id="notice" type='explain'>
     <h4>说明</h4>
