--- a/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/12.delete-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/12.delete-tenant.md
@@ -10,7 +10,7 @@ OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
 
 ## 操作步骤
 
-1. 使用 root 用户登录到集群的 sys 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
     ```shell
     obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
