--- a/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/8.tenant-scale-in-and-out/2.adjust-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/8.tenant-scale-in-and-out/2.adjust-resource-specifications.md
@@ -55,7 +55,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 确认租户是否使用了独立的资源规格，可以执行以下语句，获取待操作的租户所使用的资源规格 ID：
 
-1. 使用 root 用户登录集群的 sys 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
    ```shell
    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
@@ -90,7 +90,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 下面以调整租户 `mq_t1` 的资源规格，调大 CPU 资源为例进行说明。
 
-1. 使用 root 用户登录到集群的 sys 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
     ```shell
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
@@ -161,7 +161,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 同样以租户 `mq_t1` 为例，示例如何调整 CPU 资源。
 
-1. 使用 root 用户登录到集群的 sys 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
     ```shell
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
