--- a/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md
+++ b/zh-CN/6.manage/2.tenant-management/5.common-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md
@@ -26,7 +26,7 @@ OceanBase 数据库 V4.0.0 版本暂不支持调小 Unit Number。
 
 下面以调整租户 `mq_t1` 的 Unit Number 为例来介绍操作方法。
 
-1. 使用 root 用户登录到集群的 sys 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
     ```shell
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
