--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/3.add-replica.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/3.add-replica.md
@@ -39,7 +39,7 @@
    <p>此处仅以添加 1 个 zone 为示例，实际操作中注意添加的 zone 的数量需要能够满足多数派原则。</p>
 </main>
 
-1. 使用 root 用户登录到集群的 sys 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
    ```shell
    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
