--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/2.password-complexity-of-mysql-mode.md
@@ -25,7 +25,7 @@ OceanBase 数据库 MySQL 模式下，用户可以通过设置一系列系统变
 
 本节以设置密码复杂度规则为最小长度为 8 个字符，至少包含 3 个大写字母、3 个小写字母和 1 个特殊字符、用户密码不可以与用户名相同并且检查策略为 `medium` 为例，提供设置密码复杂度的操作指导。
 
-1. 使用 root 用户登录集群的 MySQL 租户。
+1. 使用 `root` 用户登录集群的 MySQL 租户。
 
     ```shell
     obclient -uroot@mysql -P2881 -h10.xxx.xxx.1 -p***1***
