--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/2.set-password-complexity-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/2.set-password-complexity-of-mysql-mode.md
@@ -21,7 +21,7 @@ OceanBase 数据库的 MySQL 模式主要通过设置一系列系统变量来规
 
 本节以设置密码复杂度规则为最小长度为 8 个字符，至少包含 3 个大写字母、3 个小写字母和 1 个特殊字符、用户密码不可以与用户名相同并且检查策略为 `medium` 为例，提供设置密码复杂度的操作指导。
 
-1. 以管理员用户登录数据库的 MySQL 租户。
+1. 管理员用户登录集群的 MySQL 租户。
 
 2. 设置变量值。
 
