--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/2.view-a-database-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/2.view-a-database-of-mysql-mode.md
@@ -4,7 +4,7 @@
 
 ## 使用 SQL 语句查看数据库
 
-用 `root` 用户登录数据库的 `sys` 租户使用 `SHOW DATABASES` 语句查看 MySQL 模式下租户的数据库信息。
+用 `root` 用户登录集群的 `sys` 租户使用 `SHOW DATABASES` 语句查看 MySQL 模式下租户的数据库信息。
 
 示例如下：
 
