--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/1.view-locality.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.locality-common-operations/1.view-locality.md
@@ -6,7 +6,7 @@
 
 ## 操作步骤
 
-1. 使用 root 用户登录到集群的 sys 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
    ```shell
    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
