--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
@@ -102,7 +102,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 
 ## 操作示例
 
-1. 使用 sys 用户登录集群的 Oracle 租户。
+1. 使用 `SYS` 用户登录集群的 Oracle 租户。
 
     ```shell
     obclient -usys@oracle -h127.1 -P2881 -  P***1*** 
