--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/3.delegation-of-authority-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/3.delegation-of-authority-of-oracle-mode.md
@@ -4,7 +4,7 @@
 
 ## 权限转授示例
 
-1. 使用 sys 用户登录集群的 Oracle 租户，并创建 A，B，C 三个用户并分别授予 `CREATE SESSION` 系统权限，单独授予 A 用户 `GRANT ANY PRIVILEGE` 权限。
+1. 使用 `SYS` 用户登录集群的 Oracle 租户，并创建 A，B，C 三个用户并分别授予 `CREATE SESSION` 系统权限，单独授予 A 用户 `GRANT ANY PRIVILEGE` 权限。
 
     ```shell
     obclient > CREATE USER A IDENTIFIED BY **1***;
