--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/5.view-log-archive-piece.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/5.view-log-archive-piece.md
@@ -10,7 +10,7 @@
 
 `sys` 租户可以通过 `oceanbase.CDB_OB_ARCHIVELOG_PIECE_FILES` 视图查看当前集群中所有租户的所有 Piece 信息。
 
-1. 使用 `root` 用户登录数据库的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，查看所有租户的所有 Piece 信息。
 
