--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/3.management-resource-unit/2.modify-the-configuration-of-a-resource-unit.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/3.management-resource-unit/2.modify-the-configuration-of-a-resource-unit.md
@@ -64,7 +64,7 @@ MEMORY_SIZE [=] memsize,
 
 示例：
 
-使用 `root` 用户登录数据库的 `sys` 租户后，修改资源单元 `unit1` 的配置。
+使用 `root` 用户登录集群的 `sys` 租户后，修改资源单元 `unit1` 的配置。
 
 ```sql
 obclient> ALTER RESOURCE UNIT unit1 MAX_CPU 15, MEMORY_SIZE '20G', LOG_DISK_SIZE '4G';
