--- a/zh-CN/7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/3.observer-thread-model/3.background-thread.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/3.observer-thread-model/3.background-thread.md
@@ -31,8 +31,8 @@
 | LuaHandler | 进程 | 系统 | 1 | 处理应急场景的 Lua 请求以读取 observer 进程内部状态 |
 | MemDumpTimer | 进程 | 系统 | 1 | 定时打印 MEMORY 日志 |
 | MemoryDump | 进程 | 系统 | 1 | 定时统计内存信息 |
-| MultiTenant | 进程 | 系统 | 1 | 负责刷多租户 CPU 配比，用于资源调度。 |
-| OB_PLOG | 进程 | 系统 | 1 | 异步打印 observer 进程诊断日志。 |
+| MultiTenant | 进程 | 系统 | 1 | 负责刷多租户 CPU 配比，用于资源调度 |
+| OB_PLOG | 进程 | 系统 | 1 | 异步打印 observer 进程诊断日志 |
 | pnio | 进程 | 系统 | 由 net_thread_count 配置的参数决定 | 新网络框架 pkt-nio 的网络 IO 线程 |
 | pnlisten | 进程 | 系统 | 1 | 监听 RPC 端口以及转发 RPC 连接到网络 IO 线程 |
 | SignalHandle | 进程 | 系统 | 1 | 信号处理线程 |
