--- a/zh-CN/7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/3.observer-thread-model/3.background-thread.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/3.observer-thread-model/3.background-thread.md
@@ -9,6 +9,7 @@
 
 | 线程名 | 级别 | 归属模块 | 线程数量 | 功能描述 |
 | --- | --- | --- | --- | --- |
+|FrzInfoDet|租户|事务|2|周期性检查是否有新的 freeze_info |
 | LockWaitMgr | 租户 | 事务 | 1 | 用于周期性检查超时时间，唤醒等锁的事务 |
 | TenantWeakRe | 租户 | 事务 | 1 | 租户级别备机读时间戳生成线程 |
 | TransService | 租户 | 事务 | 1 | 处理事务模块内部若干后台处理的异步任务，推 Ls 的 Checkpoint 等 |
@@ -37,4 +38,4 @@
 | pnlisten | 进程 | 系统 | 1 | 监听 RPC 端口以及转发 RPC 连接到网络 IO 线程 |
 | SignalHandle | 进程 | 系统 | 1 | 信号处理线程 |
 | SignalWorker | 进程 | 系统 | 1 | 异步处理信号线程 |
-| L0_G2 | 租户 | 选举 | 1 | 专门处理选举请求的线程 |
+| L0_G2 | 租户 | 选举 | min_cpu，最少 8 个 | 专门处理选举请求的线程 |
