DBA_OB_TENANTS 视图字段更新

--- a/zh-CN/7.reference/2.administrator-guide/7.management/3.daily-inspection/5.check-the-resource-usage-status-of-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/3.daily-inspection/5.check-the-resource-usage-status-of-a-tenant.md
@@ -1,12 +1,8 @@
-检查租户资源使用状态
-===============================
+# 检查租户资源使用状态
 
 您可以通过 SQL 命令的方式来检查租户资源使用状态。
 
-通过 SQL 命令查看租户资源的使用情况
------------------------------------------
-
-您可执行以下命令，查看租户资源的使用情况。
+语句如下：
 
 ```sql
 obclient> SELECT t1.tenant_name,concat(svr_ip,":",svr_port) as "unit_server",t3.max_cpu,t3.min_cpu  FROM OCEANBASE.DBA_OB_TENANTS t1,OCEANBASE.DBA_OB_UNITS t2,OCEANBASE.DBA_OB_UNIT_CONFIGS t3,OCEANBASE.DBA_OB_RESOURCE_POOLS t4
